Fix of thumnail url overflow/wrap

--- a/web/src/main/webapp/geonetwork.css
+++ b/web/src/main/webapp/geonetwork.css
@@ -1,4 +1,3 @@
-
 /*******************************************************************************
 general
 *******************************************************************************/
@@ -983,6 +982,8 @@ span.thumbnail {
     font-size: small;
     font-style: italic;
     color: #2a628f;
+    overflow-x: scroll;
+    white-space: nowrap;
 }
 
 div.relatedElements {
